Fix name station layout bug

--- a/src/components/station-card/station-card.scss
+++ b/src/components/station-card/station-card.scss
@@ -39,6 +39,7 @@ station-card {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        max-width: 75%;
     }
 
     .station-distance {
